# app/Http/Resources/Product/ProductResource.php
@@ -35,6 +35,7 @@ class ProductResource extends JsonResource
             'price' => $this->price,
             'weight' => $this->weight,
             'weight_unit' => $this->weight_unit,
+            'badge' => $this->badge,
             'archived' => $this->archived,
             'popularity' => $this->popularity,
             'variants' => new ProductVariantCollection($this->variants),
@@ -48,8 +49,8 @@ class ProductResource extends JsonResource
      * @OA\Schema(
      *   schema="Product",
      *   description="Product resource object",
-     *   required = {"id", "type", "title", "description", "price", "weight",
-     *      "weight_unit", "archived", "popularity", "variants", "category_ids", "media"},
+     *   required = {"id", "type", "title", "description", "price", "weight", "weight_unit",
+     *      "badge", "archived", "popularity", "variants", "category_ids", "media"},
      *   @OA\Property(property="id", type="integer", example=1),
      *   @OA\Property(property="type", type="string", example="products"),
      *   @OA\Property(property="title", type="string", example="Margarita"),
@@ -58,6 +59,7 @@ class ProductResource extends JsonResource
      *   @OA\Property(property="weight", type="float", nullable="true", example=120),
      *   @OA\Property(property="weight_unit", type="string", nullable="true", example="g",
      *     enum={"g", "kg", "ml", "l", "cm"}),
+     *   @OA\Property(property="badge", type="string", nullable="true", example="New"),
      *   @OA\Property(property="archived", type="boolean", example="false"),
      *   @OA\Property(property="popularity", type="integer", nullable="true", example="1"),
      *   @OA\Property(property="variants", type="array", @OA\Items(ref ="#/components/schemas/ProductVariant")),
